test-results/error_consume.err
[31m./examples/error_consume.cup:19:1: error: [0] Macro @test_error_missing failed: @test_error_missing expected compound_statement, but nothing found[0m
@test_error_missing
[31m^[0m
